--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: SOCO INDUSTRIAL
-email: admin@socoindustrial.com
-url: https://www.socoindustrial.com
-description: "24/7 mobile equipment service & repair. Serving Southern Colorado - Canon City, Colorado Springs, Pueblo, Westcliffe, Cripple Creek, Hartsel, Salida. Oil changes for passenger vehicles and heavy equipment. Hoses crimped on-site. Mechanical and fabrication services. Call or text (719) 877-5139"
-keywords: "oil change, hydraulic, hydraulic hose, repair, service, hose, crimp, mobile, eqipment, lube, Amsoil, fabrication, mechanic, Canon City, Florence, Penrose, Westcliffe, Cripple Creek, Hartsel, Salida, Pueblo, Colorado Springs"
-skills: "<p>24/7 Mobile Equipment Service & Repair. Hydraulic Hoses, Oil Changes, & More.</p> <p><i>Keep Colorado Moving</i></p> <p>Call or Text: (719) 877-5139 • Email: admin@socoindustrial.com • Serving Southern Colorado</p>"
-meta_author: SOCO INDUSTRIAL
+title: SOCO ENERGY
+email: admin@socoenergy.org
+url: https://www.socoenergy.org
+description: "An energy recovery company turning used oil into quality burner fuel.  Call or text +1 (877) 333-1776"
+keywords: "used oil, oil, energy, burner fuel, energy recovery"
+skills: "<p>An energy recovery company turning used oil into quality burner fuel.</p> <p><i>Finding The Solution</i></p> <p>Call or Text: +1 (877) 333-1776 • Email: admin@socoenergy.org • Produced in the USA, distributed globally.</p>"
+meta_author: SOCO ENERGY
 
 # Google webmaster tools
-google_verify: google3b25c34b4d0757e5.html
+google_verify:
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify: 
@@ -32,24 +32,24 @@ color:
 
 # Footer settings
 footer:
-  copyright: SOCO INDUSTRIAL CORPORATION
+  copyright: SOCO ENERGY CORPORATION
   location: Location
   social: Social Media Links
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
-social:
-  - title: twitter
-    url: https://twitter.com/SOCOindustrial
-  - title: facebook
-    url: https://www.facebook.com/socoindustrial
-  - title: github
-    url: https://github.com/SOCOindustrial
+#social:
+  #- title: twitter
+    #url: https://twitter.com/SOCOindustrial
+  #- title: facebook
+    #url: https://www.facebook.com/socoindustrial
+  #- title: github
+    #url: https://github.com/SOCOindustrial
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: PO Box 121
-  - line: Florence, CO 81226
+  - line: PO Box 281
+  - line: Canon City, CO 81215
 
 # Credits content
 credits: 'This website was built using Freelancer, a free to use & open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
