--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ skills: "<p>An energy recovery company turning used oil into quality burner fuel
 meta_author: SOCO ENERGY
 
 # Google webmaster tools
-google_verify:
+google_verify: google3b25c34b4d0757e5.html
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify: 
