--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ color:
 footer:
   copyright: SOCO ENERGY CORPORATION
   location: Location
-  social: Social Media Links
+  #social: Social Media Links
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
