--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: SOCO ENERGY
 email: admin@socoenergy.org
 url: https://www.socoenergy.org
-description: "An energy recovery company turning used oil into quality burner fuel.  Call or text +1 (877) 333-1776"
+description: "An energy recovery company turning used oil into quality burner fuel.  Email admin@socoenergy.org"
 keywords: "used oil, oil, energy, burner fuel, energy recovery"
-skills: "<p>An energy recovery company turning used oil into quality burner fuel.</p> <p><i>Finding The Solution</i></p> <p>Call or Text: +1 (877) 333-1776 • Email: admin@socoenergy.org • Produced in the USA, distributed globally.</p>"
+skills: "<p>An energy recovery company turning used oil into quality burner fuel.</p> <p><i>Finding The Solution</i></p> <p>Email: admin@socoenergy.org • Produced in the USA, distributed globally.</p>"
 meta_author: SOCO ENERGY
 
 # Google webmaster tools
